--- a/product-detail.css
+++ b/product-detail.css
@@ -27,7 +27,9 @@ body {
     font-family:  'DM Serif Display', serif;
     background-color: var(--bond);
 }
-.product-detail {
+
+.product-detail-emergent {
+    background-color: var(--bond);
     border-radius: 12px;
     border: var(--hospital-green) 2px solid;
     position: absolute;
@@ -35,7 +37,7 @@ body {
     width: 360px;
     padding-bottom: 24px;
 }
-.product-detail-close {
+.product-detail-emergent-close {
     background-color: var(--hospital-green);
     width: 14px;
     height: 14px;
@@ -49,29 +51,29 @@ body {
     align-items: center;
     justify-content: center;
 }
-.product-detail-close:hover {
+.product-detail-emergent-close:hover {
     cursor: pointer;
 }
-.product-detail > img:nth-child(2) {
+.product-detail-emergent > img:nth-child(2) {
     width: 100%;
     height: 360px;
     object-fit: cover;
     border-radius: 10px;
 }
-.product-info {
+.product-info-emergent {
     margin: 0 24px;
 }
-.product-info p:nth-child(1) {
+.product-info-emergent p:nth-child(1) {
     font-weight: bold;
     font-size: var(--lg);
     margin: 12px 0;
 }
-.product-info p:nth-child(2) {
+.product-info-emergent p:nth-child(2) {
     color: #797979;
     font-size: var(--lg);
     margin: 0 0 30px 0;
 }
-.product-info p:nth-child(3) {
+.product-info-emergent p:nth-child(3) {
     color: #797979;
     font-size: var(--md);
     margin: 0 0 30px 0;
@@ -93,7 +95,7 @@ body {
     justify-content: center;
 }
 @media (max-width: 640px) {
-    .product-detail {
+    .product-detail-emergent {
         width: 100%;
     }
 }
